fixed issue with some overlap (email from Anna)

--- a/SecureAppGenerator/CSS/src/main.css
+++ b/SecureAppGenerator/CSS/src/main.css
@@ -22,7 +22,7 @@ form{
 
 .help_area{
     position: absolute;
-    top: 600px;
+    top: 625px;
     left: 10px;
 }  
 
